# phenonaut

./: .buildinfo  .gitignore  CHANGELOG.md  NOTICE  README.md  cmap_example.html  example0_iris.py  example1_TCGA.py  example2_CMAP_metric_groups.ipynb  genindex.html  index.html  objects.inv  phenonaut.data.html  phenonaut.html  phenonaut.integration.html  phenonaut.integration.integrators.html  phenonaut.metrics.compactness.html  phenonaut.metrics.distinctness.html  phenonaut.metrics.html  phenonaut.output.html  phenonaut.packaged_datasets.html  phenonaut.predict.default_predictors.html  phenonaut.predict.default_predictors.pytorch_models.html  phenonaut.predict.html  phenonaut.transforms.html  publication_examples.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  tcga_example.html  userguide.html  workflow_guide.html
.github/workflows/: documentation.yaml
_sources/: cmap_example.rst.txt  phenonaut.data.rst.txt  phenonaut.metrics.compactness.rst.txt  phenonaut.output.rst.txt  phenonaut.packaged_datasets.rst.txt  phenonaut.predict.default_predictors.rst.txt  phenonaut.transforms.rst.txt  publication_examples.rst.txt  tcga_example.rst.txt  workflow_guide.rst.txt
config/: aiml.yml  columbus.yml  generic.yml  nanostring.yml
docs/: cmap_example.html  genindex.html  index.html  objects.inv  phenonaut.data.html  phenonaut.html  phenonaut.metrics.html  phenonaut.output.html  phenonaut.packaged_datasets.html  phenonaut.predict.default_predictors.html  phenonaut.predict.default_predictors.pytorch_models.html  phenonaut.predict.html  phenonaut.transforms.html  publication_examples.html  py-modindex.html  search.html  searchindex.js  tcga_example.html  umap_example.html  userguide.html  workflow_guide.html
docs/_sources/: phenonaut.metrics.rst.txt  phenonaut.predict.rst.txt  umap_example.rst.txt  workflow_guide.rst.txt
docs/_static/: documentation_options.js
docsource/: Makefile  cmap_example.rst  conf.py  index.rst  phenonaut.data.rst  phenonaut.integration.integrators.rst  phenonaut.integration.rst  phenonaut.metrics.distinctness.rst  phenonaut.metrics.rst  phenonaut.output.rst  phenonaut.packaged_datasets.rst  phenonaut.predict.default_predictors.pytorch_models.rst  phenonaut.predict.default_predictors.rst  phenonaut.predict.rst  phenonaut.rst  phenonaut.transforms.rst  publication_examples.rst  rebuild_docs.bash  tcga_example.rst  userguide.rst
phenonaut/: __init__.py  __main__.py  phenonaut.py  utils.py  workflow.py
phenonaut/data/: dataset.py  platemap_querier.py  recipes.py
phenonaut/metrics/: __init__.py  distances.py  measures.py  non_ds_phenotypic_metrics.py  performance.py  utils.py
phenonaut/output/: __init__.py  boxplot.py  heatmap.py  pair_plot.py  ph0_pptx_template_desc.pptx  pptx.py  scatter.py  spreadsheet.py  visualisation_base.py
phenonaut/packaged_datasets/: __init__.py  base.py  breast_cancer.py  cmap.py  iris.py  lincs.py  metadata_moa.py  tcga.py
phenonaut/predict/: optuna_functions.py  predict_utils.py  predictor_dataclasses.py  profile.py
phenonaut/predict/default_predictors/: classifiers.py  multiregressors.py  regressors.py
phenonaut/predict/default_predictors/pytorch_models/: __init__.py  dave.py  multiregressor_nn.py
phenonaut/transforms/: __init__.py  dimensionality_reduction.py  generic_transformations.py  imputers.py  preparative.py  supervised_transformer.py  transformer.py
src/phenonaut/: __init__.py  __main__.py  errors.py  phenonaut.py  utils.py  workflow.py
src/phenonaut/data/: __init__.py  dataset.py  platemap_querier.py  utils.py
src/phenonaut/integration/: __init__.py  simple_methods.py
src/phenonaut/integration/integrators/: __init__.py  base.py  classic.py
src/phenonaut/integration/pytorch_models/: __init__.py  contrastive_encoder.py
src/phenonaut/metrics/: __init__.py  cdu_benchmark_suite.py  distances.py  measures.py  non_ds_phenotypic_metrics.py  performance.py  utils.py
src/phenonaut/metrics/compactness/: __init__.py  pr.py
src/phenonaut/metrics/distinctness/: __init__.py  distinctness_measures.py  permutation_test_distinct.py  permutation_test_distinct_type2_error.py
src/phenonaut/metrics/uniqueness/: __init__.py  parallel_auprc.py  parallel_auroc.py
src/phenonaut/output/: __init__.py  boxplot.py  heatmap.py  ph0_pptx_template.pptx  pptx.py  scatter.py  spreadsheet.py  visualisation_base.py
src/phenonaut/packaged_datasets/: __init__.py  base.py  breast_cancer.py  cmap.py  iris.py  lincs.py  metadata_moa.py  tcga.py
src/phenonaut/predict/: __init__.py  optuna_functions.py  predict_utils.py  predictor_dataclasses.py  profile.py
src/phenonaut/predict/default_predictors/: classifiers.py  multiregressors.py  regressors.py
src/phenonaut/predict/default_predictors/pytorch_models/: __init__.py  dave.py  multiregressor_nn.py
src/phenonaut/transforms/: __init__.py  dimensionality_reduction.py  generic_transformations.py  imputers.py  preparative.py  supervised_transformer.py  transformer.py
test/: conftest.py  generated_regression_dataset.csv  iris.py  test_dataset.py  test_metrics.py  test_phenonaut_obj.py  test_prediction.py  test_preparation.py  test_transformations.py
test/extensive_tests/: test_prediction.py
