[project]
name="phenonaut"
dynamic = ["version"]
description="A toolkit for multiomic phenotypic space exploration."
authors = [
    {name = "Steven Shave", email="steven.x.shave@gsk.com"},
    {name = "Abdullah Athar", email="abdullah.m.athar@gsk.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy==1.26", # Pinned because of numba
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.13.0",
    "torch>=2.2.1",
    "fire>=0.5.0",
    "tqdm>=4.60.0",
    "openpyxl>=3.1.1",
    "optuna>=3.6.1",
    "h5py>=3.6.0",
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2",
    "tables>=3.7.0",
    "umap-learn>=0.5.6",
    "rbo>=0.1.2",
    "python-pptx>=0.6",
    "requests",
    "mvlearn==0.4.1", # mvlearn's next release, 0.5.0 does not support matplotlib >3.3
    "torchvision",
    "torchaudio",
    "numba>=0.59.0",
    "llvmlite>=0.41.0",
    "ipykernel",
    "ipywidgets",
    "tensorboard",
    ]


[project.urls]
Homepage = "https://carragherlab.github.io/phenonaut/"
Documentation = "https://carragherlab.github.io/phenonaut/phenonaut.html"
Repository = "https://github.com/CarragherLab/phenonaut"
Changelog = "https://github.com/CarragherLab/phenonaut/blob/main/CHANGELOG.md"



[tool.black]
line-length = 88
skip-string-normalization = true
include = '''
(
    ^/tests/
  | ^/src/
  | ^/setup[.]py
)
'''

exclude = '''
(
    __pycache__
    |.*\.egg-info
    |.*.pptx
)
'''
extend-exclude = '''.*test_.*'''


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
phenonaut = ["output/ph0_*.pptx"]

[tool.setuptools.dynamic]
version = {attr = "phenonaut.__version__"}

[project.optional-dependencies]
dev = [
    'pandas==2.2.0',
    'black==24.3.0',
    'pytest==8.1.1',
    'build==1.2.1',
    'pre-commit==3.7.0',
    'sphinx==7.2.6',
    'sphinx_rtd_theme',
]

[build-system]
requires = [
    "setuptools>=68.2.2",
    "wheel>=0.41.2",
    "torch>=2.2.1",
    "pre-commit>=3.7.0",
    "black==24.3.0",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = 'black'

[tool.pytest.ini_options]
"testpaths" = "test/test*"

[project.scripts]
phenonaut = "phenonaut.__main__:main"
