[metadata]
name = phenonaut
version = 1.1.4
author = Steven Shave
author_email = stevenshave@gmail.com
description = A toolkit for multiomic phenotypic space exploration.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CarragherLab/phenonaut
project_urls =
    Bug Tracker = https://github.com/CarragherLab/phenonaut/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent


[options.package_data]
phenonaut.output = *.pptx

[options]
package_dir =
    = .
packages = 
    phenonaut
    phenonaut.data
    phenonaut.metrics
    phenonaut.output
    phenonaut.packaged_datasets
    phenonaut.predict
    phenonaut.transforms



python_requires = >=3.8, <3.10
install_requires =
    numpy>=1.20.3
    pandas>=1.5.0
    pyyaml
    matplotlib>=3.5.0
    seaborn>=0.11.2
    tables>=3.7.0
    progressbar2>=4.0.0
    h5py>=3.6.0
    umap-learn>=0.5.1
    rbo>=0.1.2
    fire>=0.4.0
    python-pptx
    openpyxl>=3.0.9


[tool:pytest]
testpaths = test

